<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="4"
    android:padding="8dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_android_black_24dp"
        android:layout_weight="1"/>



    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:text="@string/title_"
        android:textSize="20sp"
        android:layout_weight="1"
        android:textColor="@color/colorText" />

    <TextView
        android:id="@+id/genreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre_"
        android:textSize="20sp"
        android:layout_weight="1"
        android:textColor="@color/colorText" />

    <TextView
        android:id="@+id/ratingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating_"
        android:textSize="20sp"
        android:layout_weight="1"
        android:textColor="@color/colorText" />

</LinearLayout>
